fix: update slider spacing and phone responsiveness

--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -83,7 +83,7 @@
   }
 }
 .swiper {
-  width: 100vh;
+  width: 100vw;
   height: 100%;
 }
 
